# Discord_OpenGraph_Viewer

./: .env.example  Cargo.toml  Readme.md  dov
.github/workflows/: rust.yml
src/: main.rs
src/data/: full.rs  mod.rs
