[package]
name = "ds_profile_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
miniserde = "0.1.40"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
panic = "unwind"
